fixed some text, calendar alignment, added copyright footer, added readme and license

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,7 +92,7 @@ body {
   cursor: pointer;
   transition: color 0.15s ease, background-color 0.15s ease;
   background-color: var(--theme-highlight-bg);
-  padding: 0px 2px 1px 2px;
+  padding: 0px 2px 0.5px 2px;
   margin-left: 1px;
   margin-right: 1px;
   border-radius: 4px;
